issue with margins on mobile screens solved - LDG - 20260103

--- a/src/index.css
+++ b/src/index.css
@@ -362,7 +362,7 @@ ABOVE - styling game area - copied from separte project - LDG - 20251013
         margin-top:100px;
         margin-bottom:100px;
         height:400px;
-        width:700px;
+        width:100vw;
         /* background-color:red; */
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -380,7 +380,12 @@ ABOVE - styling game area - copied from separte project - LDG - 20251013
         justify-content: center;
         align-items: center;
         max-height:40px;
-        max-width:100%;
+
+        /* this 29vw worked when there was no fontsize set - it gave nice margin on mobile*/
+        max-width:29vw;
+        /* this sets the fontsize hardcoded not responsive */
+        font-size:9px;
+        min-width:28vw;
       }
 
       .container{
@@ -399,15 +404,7 @@ ABOVE - styling game area - copied from separte project - LDG - 20251013
       .stylingQuickAccess{
         display:block;
       }
-      /* 
-      .card{
-        background-color: white;
-        border-radius: 5px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        max-height:40px;
-      } */
+
 
   }
 
